a[id]{..} - "anchor jump fix"

--- a/_INSTALL/public/Blogixx/styles/blog.css
+++ b/_INSTALL/public/Blogixx/styles/blog.css
@@ -31,6 +31,12 @@ tag {
 	tag strong {
 		font-weight: normal;
 	}
+a[id] {/* bootstrap fixed nav anchor jump fix */
+  display: block; 
+  position: relative; 
+  top: -80px; 
+  visibility: hidden;
+}
 a[name] {/* bootstrap fixed nav anchor jump fix */
   display: block; 
   position: relative; 
